...
            ) {
                Box(modifier = Modifier.fillMaxWidth()) {
                    CustomTextField(
                        value = state.identifier,
                        onValueChange = interactionListener::onIdentifierChange,
                        labelText = stringResource(Res.string.phone_or_verified_email),
                        modifier = Modifier.fillMaxWidth().testTag("IdentifierInput"),
                        errorText = state.identifierError?.asString(),
                        supportingText = stringResource(Res.string.phone_or_verified_email_supporting_text),
                        textStyle = if (isPhoneInput) {
                            Theme.typography.bodyLarge.copy(textDirection = TextDirection.Ltr)
                        } else {
                            Theme.typography.bodyLarge
...
                horizontalAlignment = Alignment.CenterHorizontally,
                verticalArrangement = Arrangement.spacedBy(16.dp)
            ) {
                AppButton(
                    type = AppButtonType.Primary,
                    onClick = interactionListener::onNextClicked,
                    modifier = Modifier.fillMaxWidth().testTag("NextButton"),
                    text = stringResource(Res.string.next),
                    state = state.actionButtonState
                )

                Row(
                    verticalAlignment = Alignment.CenterVertically,
...
