...
        item {
            OtpInputField(
                otpText = state.otpCode,
                otpLength = 5,
                errorText = state.otpError?.asString(),
                onOtpModified = interactionListener::onOtpChange,
                modifier = Modifier.fillMaxWidth().padding(bottom = 32.dp).testTag("OtpInput")
            )
        }

        item {
            Column(
                modifier = Modifier.fillMaxWidth(),
...
